# fc-info-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yml
src/: main.rs
