[package]
name = "fc-info"
version = "0.1.0"
authors = ["Lukas.J Han <lukas.j.han@gmail.com>"]
description = "A CLI tool for analyzing TTF and OTF font files"
license = "MIT"
repository = "https://github.com/lukasjhan/fc-info-rs"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttf-parser = "0.24.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
